Manifest/Production/Frontend/p-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prod
  namespace: production
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-prod
    spec:
      containers:
        - name: frontend-prod
          image: 768876311475.dkr.ecr.ap-southeast-1.amazonaws.com/frontend-prod:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 600m
              memory: 768Mi
            requests:
              cpu: 200m
              memory: 384Mi
  selector:
    matchLabels:
      app: frontend-prod
