Manifest/Production/Frontend/p-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-prod-service
  namespace: production
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend-prod
  type: ClusterIP
