Manifest/Production/Frontend/p-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-prod-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-challenge-type: "http01"	
    cert-manager.io/cluster-issuer: "letsencrypt-frontend-prod"
spec:
  rules:
  ## Service Location n Characters
  - host: frontend.ical.host
    http:
      paths:
      - backend:
          serviceName: frontend-prod-service
          servicePort: 3000
        path: /
  tls:
    - hosts:
      - frontend.ical.host
      secretName: frontend-prod-tls
